# apkdl_rs

./: .gitignore  Cargo.toml
.github/workflows/: ci.yml
apkdl_rs/: Cargo.toml
apkdl_rs/src/: download.rs  http.rs  main.rs  search.rs  tui.rs  util.rs
src/: config.rs  download.rs  extract.rs  http.rs  main.rs  search.rs  tui.rs  update.rs  util.rs
