[package]
name = "apkdl"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.12", features = ["blocking"] }
scraper = "0.22"
zip = "2"
tempfile = "3"
indicatif = "0.17"
clap = { version = "4", features = ["derive"] }
colored = "3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1"
toml = "0.8"
ratatui = "0.29"
crossterm = "0.28"
